--- a/src/Localization/en.json
+++ b/src/Localization/en.json
@@ -1,5 +1,5 @@
 {
-    "HARDCODED MODS - GROUP": "None",
+    "HARDCODED MODS - GROUP": false,
     "Resolution": "Choose the desired resolution for Tears of The Kingdom.\nNOTE: This is an internal upscaler, using Dynamic FPS.\nExtended Memory layout in Yuzu is Mandatory.",
     "FPS": "Choose the desired FPS LIMIT for Tears of The Kingdom.",
     "Shadows": "Choose the desired SHADOW resolution for Tears of The Kingdom.\nNote: Recommended to use 1024x.\nLegacy Upscaling can go to 8K shadows (unstable)\nNew Upscaling is limited to 1k Shadows (STABLE)",
@@ -9,10 +9,10 @@
     "DFPS": "Select DFPS Version.\nIt's recommended to use the latest available.\nNote: Versions below 1.5.4 are not fully supported.",
     "Upscale": "New upscaling method = Max DFPS++, works on all versions.\nLegacy = DFPS 1.5.5(beta3), not compatible with version 1.2.1+",
     "Aspect Ratio": "Aspect Ratio mods, those mods are a combination of various UI changes.\nNote: Full support up to 1.2.0 and partial support after 1.2.1.",
-    "PRESETS - GROUP": "None",
+    "PRESETS - GROUP": false,
     "Presets": "Preset Mods for Tears of The Kingdom.",
     "Settings": "Select Yuzu PRESET settings, based on your PC configuration.",
-    "BUTTONS - GROUP": "None",
+    "BUTTONS - GROUP": false,
     "Reset": "Removes the portable path and defaults to Appdata",
     "Browse": "Search for PORTABLE Yuzu/Ryujinx.exe.",
     "Backup": "Backups your Tears of The Kingdom saves.",
@@ -23,7 +23,7 @@
     "Main": "The Main section of the Mod Manager.",
     "Cheats": "In this tab you can add cheats to your game.",
     "Shaders": "Clear Shader Cache, YUZU only. \nSometimes can Improve performance and Fix Visual bugs.",
-    "DYNAMICMODS - GROUP": "None",
+    "DYNAMICMODS - GROUP": false,
     "Remove QuaReduction": "Improves Quality when FPS drops.\nThis is mandatory with new DFPS.",
     "Remove DOF": "Removes Depth of Field effect.",
     "Remove Lensflare": "Removes lensflare effect,\nNote: The lensflare in TOTK flickers a lot..",
@@ -31,7 +31,7 @@
     "Camera Speed x2": "Increase the Player Camera Speed.",
     "Remove FXAA": "Removes Internal FX Anti Aliasing, \nNOTE: could improve quality with external upscaler.",
     "Remove FSR": "Removes Internal FSR 1.0 Upscaler, \nNOTE: could reduce blurriness and improve quality.",
-    "SETTINGS - GROUP": "None",
+    "SETTINGS - GROUP": false,
     "fonts": "Change fonts from the ones present\nNote: Some of the fonts may need to be installed separately.",
     "Text Colors": "Select Text Colors.",
     "GUI-Theme": "Select ttkbootstrap based theme!",
@@ -39,11 +39,11 @@
     "Auto Backup": "Backup save files, every time you click apply.",
     "Auto Backup Cheats": "Backup save files, every time you click apply In the cheat Menu.",
     "Gui Animations": "Removes GUI animation, specifically for cheat Menu.\nNote: There shouldn't be need to turn this off.",
-    "ULTRACAM - GROUP": "None",
+    "ULTRACAM - GROUP": false,
     "Ultracam": "UltraCam: a single mod featuring resolution scaling, shadow resolutions, dfps, fps, fov, freecam and more!\nZL + DOWN to go into freecam mode!\nZL+Y/A to change Fov\nThe Mod is kept up to date by me.\nA lot more features are available, check GItHub for more controls.\n DFPS Legacy (Outdated): ChucksSeedAndFeed Version of DFPS, featuring resolution scaling and shadow resolution.",
     "Improve Fog": "Reduces the amount of on-screen fog, increasing visual fidelity. \n ULTRACAM- ONLY.",
     "Fov": "Let's you set default FOV to your desired FOV. \nDoesn't Affect FOV Changes.\nULTRACAM- ONLY.",
-    "CHEATS - GROUP": "None",
+    "CHEATS - GROUP TOTK": false,
     "God Mode": "Turn on God Mode",
     "Mark all Korok": "Marks all the korok seeds on the map \nNote: Zoom in!.",
     "Free Autobuild": "Removes the cost of Autobuild.",
@@ -65,5 +65,19 @@
     "Movement speed 3x": "Movement speed 300%, \nNOTE: Affects horses.",
     "Movement speed 2x": "Movement speed 200%, \nNOTE: Affects horses.",
     "Movement speed 1x": "Movement speed 100%, \nNOTE: Affects horses.",
-    "No skill CD": "Removes the skill CD of sages."
+    "No skill CD": "Removes the skill CD of sages.",
+	"CHEAT- GROUP EOW": false,
+    "99 all inventory items": "Changes the quantity of items in the inventory to 99 upon using or receiving them.",
+    "All unlockables on map": "Shows every unlockable on the map.",
+	"CHEAT- GROUP BOTW": false,
+    "Master Code": "Note: toggle it ON then OFF.",
+    "Current Arrow 999": "Sets the quantity of the current equipped arrow to 999\nNote: Enter Equipment Menu to Refill.",
+    "Recharge MasterSword": "Press R+L+A to recharge the Master Sword.",
+    "Current Weapon Health+": "Sets the durability of the current weapon to 999.",
+    "Current Bow Health+": "Sets the durability of the current bow to 999.",
+    "Current Shield Health+": "Sets the durability of the current shield to 999.",
+    "Current Weapon Damage+": "Adds +1000 to the damage caused by the current weapon.",
+    "Current Bow Fast+": "Makes the current bow really quick (also adds some additional damage).",
+    "Current Bow Damage+": "Adds +1000 to the damage caused by the current bow.",
+    "Current Shield Damage+": "Adds +1000 to the damage caused by the current shield."
 }
